# Projet8_mission

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
api/: app.py  logger.py  model.py  schemas.py
data/: README_data.md
models/: lgbm_optimized.pkl  lr_optimized.pkl
notebooks/: data_preparation.ipynb  drift_analysis.ipynb  exploratory_analysis.ipynb  modeling_local.ipynb  modeling_mlflow.ipynb  performance_profiling.ipynb
scripts/: create_modeling_mlflow.py  create_notebook.py  create_presentation.py
src/: build_dataset.py  config.py  data_loading.py  feature_engineering.py
tests/: test_api.py
