[project]
name = "projet8-mission"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "mlflow>=3.1,<3.12",
    "numba>=0.59",
    "numpy>=2.4.4",
    "pandas>=2.2.0,<3.0.0",
    "python-pptx>=1.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.45",
    "xgboost>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
# Groupe GPU : installé uniquement en local pour l'entraînement
# En local  : uv sync --group gpu
# En Docker : uv sync --no-dev --no-group gpu  (image légère, sans torch+CUDA)
gpu = [
    "torch==2.4.1+cu118",
    "torchvision==0.19.1+cu118",
]

# ---------------------------------------------------------------------------
# uv : index PyTorch CUDA 11.8 (driver >= 522.06 Windows, testé sur 528.90)
# Sur une machine sans GPU, remplacer les deux lignes torch/torchvision par
# les versions CPU ("torch>=2.1.0") et retirer les sources ci-dessous.
# ---------------------------------------------------------------------------
[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
